Add new features to kata endpoints like allowing update and delete only to creators
